fix social link flickering problem

--- a/_sass/components/social-links.sass
+++ b/_sass/components/social-links.sass
@@ -32,6 +32,7 @@
             border-radius: 2px
             height: 22px
             line-height: 22px
+            pointer-events: none
             opacity: 0
             transition: opacity 150ms linear, transform 150ms linear, -webkit-transform 150ms linear
             transform: translate3d(0,-8px,0)
@@ -47,6 +48,7 @@
             border-left: 5px solid transparent
             border-right: 5px solid transparent
             border-bottom: 6px solid $beta
+            pointer-events: none
             opacity: 0
             transition: opacity 150ms linear, transform 150ms linear, -webkit-transform 150ms linear
             transform: translate3d(0,-8px,0)
